<resources>
    <string name="app_name">SOPT_KAKAOPAY</string>
    <!--menu_home-->
    <string name="menu_assets">자산</string>
    <string name="menu_benefits">혜택</string>
    <string name="menu_home">홈</string>
    <string name="menu_stocks">주식</string>
    <string name="menu_all">전체</string>
    <!-- HomeFragment-->
    <string name="home_on_site_payment">현장 결제</string>
    <string name="home_pay_money">페이머니</string>
    <string name="home_pay_money_cost">15,000</string>
    <string name="home_charge">충전</string>
    <string name="home_send">송금</string>
    <string name="home_kakao_bank">카카오뱅크</string>
    <string name="home_deposit">입금</string>
    <string name="home_insurance">보험</string>
    <string name="home_money_manage">자산관리</string>
    <string name="home_my_card_limit">내카드한도</string>
    <string name="home_my_loan_limit">내대출한도</string>
    <string name="home_my_document">내문서함</string>
    <string name="home_my_account_benefit">내계좌혜택</string>
    <string name="home_money_check">머니체크</string>
    <string name="home_get_every_day">매일모으기</string>
    <string name="home_total_content">통합내역</string>
    <string name="home_see_entire">전체보기</string>
    <string name="home_send_money">정산 보낼 돈</string>
    <string name="home_yeonjeen">이연진</string>
    <string name="home_send_money_cost">200,000</string>
    <string name="home_sending">보내기</string>
    <string name="home_will_get_money">정산 받을 돈</string>
    <string name="home_moonsu">강문수</string>
    <string name="home_get_moeny_cost">34,000</string>
    <string name="home_get_moeny_check">확인하기</string>
    <string name="home_pay_point">페이포인트</string>
    <string name="home_pay_point_cost">25,950</string>
    <string name="home_get_point_every_day">매일 모으기</string>
    <string name="home_credit_score">신용점수</string>
    <string name="home_credit_kcb_score">750점</string>
    <string name="home_kcb">KCB</string>
    <string name="home_credit_nice_score">850점</string>
    <string name="home_nice">NICE</string>
    <string name="home_increase_credit_score">신용점수 올리기</string>
    <string name="home_privacy_policy">개인정보처리방침</string>
    <string name="home_customer_center">고객센터</string>
    <string name="home_report_problem">신고하기</string>
    <!-- AssetsFragment-->
    <string name="asset_saved_title">모은 돈</string>
    <string name="asset_saved_description">보험부터 부동산까지</string>
    <string name="asset_saved_money">20,007,500원</string>
    <string name="asset_account">계좌</string>
    <string name="asset_more">더보기</string>
    <string name="asset_owner">하늘 카뱅</string>
    <string name="asset_balance">잔액보기</string>
    <string name="asset_transfer">송금</string>
    <string name="asset_point">포인트·머니</string>
    <string name="asset_assetpoint">97원</string>
    <string name="asset_news">이가인님 소식</string>
    <string name="asset_one">1개</string>
    <string name="asset_find">발견</string>
    <string name="asset_two">2일 후</string>
    <string name="asset_card">카드값 내는 날</string>
    <string name="asset_score">신용점수</string>
    <string name="asset_nice">NICE 894</string>
    <string name="asset_use">쓴 돈</string>
    <string name="asset_today">오늘 0건</string>
    <string name="asset_where">어디에</string>
    <string name="asset_question">많이 쓰는 타입인가요?</string>
    <string name="asset_analysis">분석</string>
    <string name="asset_month">이번 달 카드 이용금액은?</string>
    <string name="asset_investment">투자한 돈</string>
    <string name="asset_interest">흥미로운 투자소식</string>
    <string name="asset_five">5개</string>
    <string name="asset_have">있어요</string>
    <string name="asset_community">커뮤니티 보기</string>
    <string name="asset_lend">빌린 돈</string>
    <string name="asset_coming">다가오는 대출 상환일정</string>
    <string name="asset_check">매달 갚는 금액 확인하기</string>
    <string name="asset_parent">우리 부부 재태크 시작</string>
    <string name="asset_together">함께하는 자산관리</string>
    <string name="asset_old">스스로 지키는 노후</string>
    <string name="asset_annuity">연금·퇴직연금</string>
    <string name="asset_house">주택청약 당첨 가능성은?</string>
    <string name="asset_apartment">내 청약 진단하기</string>
    <string name="asset_loan">대출이 필요하다면</string>
    <string name="asset_raise">신용점수 올리기</string>
    <string name="asset_go_asset">자산 바로가기</string>
    <string name="asset_go_account">계좌</string>
    <string name="asset_go_card">카드</string>
    <string name="asset_go_fund">주식·펀드</string>
    <string name="asset_go_insurance">보험</string>
    <string name="asset_go_loan">대출</string>
    <string name="asset_go_point">포인트·머니</string>
    <string name="asset_go_community">통신</string>
    <string name="asset_go_car">자동차</string>
    <string name="asset_go_realestate">부동산</string>
    <string name="asset_go_except">기타자산</string>
    <string name="asset_miss">놓친 자산은 없을까?</string>
    <string name="asset_find_miss">빈틈없는 관리를 위해 빠진 자산을 찾아보세요</string>
    <string name="asset_find_asset">자산 찾아보기</string>
    <string name="asset_hide_asset">자산 숨기기</string>
    <string name="asset_setting">설정하기</string>
</resources>
