<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_assets"
        android:icon="@drawable/ic_assets_black"
        android:title="@string/menu_assets" />
    <item
        android:id="@+id/menu_benefits"
        android:icon="@drawable/ic_benefits_black"
        android:title="@string/menu_benefits" />
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_stocks"
        android:icon="@drawable/ic_stocks_black"
        android:title="@string/menu_stocks" />
    <item
        android:id="@+id/menu_all"
        android:icon="@drawable/ic_all_black"
        android:title="@string/menu_all" />
</menu>
